--- a/Eah.WorkSafety.WebApp.Back/appsettings.json
+++ b/Eah.WorkSafety.WebApp.Back/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "Local": "server=(localdb)//mssqllocaldb; database= eahworksafety; integrated security =true;"
+    },
   "AllowedHosts": "*"
 }
