Database is almost done

--- a/Eah.WorkSafety.WebApp.Back/appsettings.json
+++ b/Eah.WorkSafety.WebApp.Back/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "Local": "server=(localdb)//mssqllocaldb; database= eahworksafety; integrated security =true;"
+        "Local": "server=(localdb)\\mssqllocaldb; database= eahworksafety; integrated security =true;"
     },
   "AllowedHosts": "*"
 }
