--- a/Eah.WorkSafety.WebApp.Back/Eah.WorkSafety.WebApp.Back.csproj
+++ b/Eah.WorkSafety.WebApp.Back/Eah.WorkSafety.WebApp.Back.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -30,8 +31,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Core\Application\Features\CQRS\Handlers\Queries\" />
-    <Folder Include="Core\Application\Features\CQRS\Queries\" />
     <Folder Include="Persistance\Migrations\" />
   </ItemGroup>
 
