--- a/Eah.WorkSafety.WebApp.Back/appsettings.json
+++ b/Eah.WorkSafety.WebApp.Back/appsettings.json
@@ -5,8 +5,8 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-  "ConnectionStrings": {
-    "Local": "Server=localhost\\SQLEXPRESS;Database=eahworksafety;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
+    "ConnectionStrings": {
+        "Local": "server=(localdb)\\mssqllocaldb; database= eahworksafety; integrated security =true;"
+    },
   "AllowedHosts": "*"
 }
