--- a/Eah.WorkSafety.WebApp.Back/Eah.WorkSafety.WebApp.Back.csproj
+++ b/Eah.WorkSafety.WebApp.Back/Eah.WorkSafety.WebApp.Back.csproj
@@ -7,9 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Core\Application\NewFolder1\**" />
     <Compile Remove="Migrations\**" />
+    <Content Remove="Core\Application\NewFolder1\**" />
     <Content Remove="Migrations\**" />
+    <EmbeddedResource Remove="Core\Application\NewFolder1\**" />
     <EmbeddedResource Remove="Migrations\**" />
+    <None Remove="Core\Application\NewFolder1\**" />
     <None Remove="Migrations\**" />
   </ItemGroup>
 
